# pyperl

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements-dev.txt
.github/: FUNDING.yml
.github/workflows/: pytest.yml
docs/pages/doctrees/: api_reference.doctree  architecture.doctree  contributing.doctree  environment.pickle  examples.doctree  index.doctree  install.doctree  pyperl.pyperl.doctree  quickstart.doctree  sponsor.doctree  support.doctree  troubleshooting.doctree  usage.doctree
docs/pages/html/: .buildinfo  api_reference.html  architecture.html  contributing.html  examples.html  genindex.html  index.html  install.html  objects.inv  py-modindex.html  pyperl.pyperl.html  quickstart.html  search.html  searchindex.js  sponsor.html  support.html  troubleshooting.html  usage.html
docs/pages/html/_sources/: architecture.rst.txt  examples.rst.txt  index.rst.txt  pyperl.pyperl.rst.txt  support.rst.txt  troubleshooting.rst.txt  usage.rst.txt
docs/pages/html/_static/: documentation_options.js
docs/source/: api_reference.rst  conf.py  contributing.rst  index.rst  install.rst  quickstart.rst
pyperl/: __init__.py  examples.py  pyperl.py
pyperl/perl_scripts/: convert_audio.pl
pyperl/tests/: test_pyperl.py
