[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyperl"
dynamic = ["version"]
authors = [{ name = "Erdogan Taskesen", email = "erdogant@gmail.com" },]
description = "pyperl is a Python library for ..."
readme = "README.md"
requires-python = ">=3"
license = "MIT"
keywords = ["Python", "pyperl", "Machine Learning", "AI", ""]
classifiers = [
    "Programming Language :: Python :: 3",
    "Intended Audience :: Science/Research",
    "Operating System :: Unix",
    "Operating System :: OS Independent",
]
dependencies = [
    'requests',
]

[project.urls]
Homepage = "https://erdogantgithub.io/pyperl"
Download = "https://github.com/erdogant/pyperl/archive/{version}.tar.gz"

#[tool.setuptools]
#packages = ["pyperl"]
# Add the entire directory with subdirs into the package
[tool.setuptools.packages.find]
include = ["pyperl*"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.dynamic]
version = { attr = "pyperl.__version__" }